--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,6 +40,7 @@ nav:
   - Overview: index.md
   - Methodology: methodology.md
   - Examples: examples.md
+  - About: about.md
 
 plugins:
   - search
