--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ build-backend = "hatchling.build"
 managed = true
 dev-dependencies = [
     "pytest>=8.3.1",
+    "pytest-cov>=5.0.0",
 ]
 
 [tool.hatch.metadata]
