--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "DESimpy"
 version = "0.1.1"
-description = "Default template for PDM package"
+description = "Discrete event simulation in using synchronous Python."
 authors = [
     { name = "galenseilis", email = "galen.seilis@seilis.ca" },
 ]
