--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,14 @@ readme = "README.md"
 requires-python = ">=3.7"
 license = {text = "Apache 2.0"}
 
+[project.optional-dependencies]
+dev = [
+    "simdist>=0.1.1",
+]
+docs = [
+    "sphinx>=8.1.3",
+    "sphinx-material>=0.0.36",
+]
 [build-system]
 requires = ["pdm-backend"]
 build-backend = "pdm.backend"
