--- a/.github/workflows/generate-documentation.yml
+++ b/.github/workflows/generate-documentation.yml
@@ -12,7 +12,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      # Check out the code
+      # Checkout the code
       - name: Checkout code
         uses: actions/checkout@v3
 
@@ -31,7 +31,7 @@ jobs:
       # Build the documentation
       - name: Build the documentation
         run: |
-          sphinx-build -b html docs _build/html
+          sphinx-build -b html docs/source _build/html
 
       # Upload documentation as an artifact (optional)
       - name: Upload documentation artifact
