--- a/.github/workflows/generate-documentation.yml
+++ b/.github/workflows/generate-documentation.yml
@@ -1,41 +1,20 @@
-name: Build Sphinx Documentation
+name: Sphinx Documentation
 
 on:
   push:
-    branches:
-      - main
   pull_request:
-    branches:
-      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      # Checkout the code
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      # Set up Python
-      - name: Set up Python 3.x
-        uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - uses: ahmad88me/sphinx-docs-action@v0.7
         with:
-          python-version: '3.x'
-
-      # Install dependencies
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install sphinx sphinx-material
-
-      # Build the documentation
-      - name: Build the documentation
-        run: |
-          sphinx-build -b html docs/source _build/html
-
-      # Upload documentation as an artifact (optional)
-      - name: Upload documentation artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: html-docs
-          path: _build/html
+          python-version: '3.8'
+          git-username: 'yourusername'
+          git-email: 'youremail@users.noreply.github.com'
+          project-path: 'src'
+          files-pattern: 'examples/*example*.py'
+          commit-message: 'update docs'
+          github-token: ${{ secrets.GITHUB_TOKEN }}
