--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ license = {text = "Apache 2.0"}
 [project.optional-dependencies]
 dev = [
     "simdist>=0.1.1",
+    "simpy>=4.1.1",
 ]
 docs = [
     "sphinx>=8.1.3",
@@ -34,4 +35,8 @@ distribution = true
 
 
 [dependency-groups]
-test = ["pytest>=8.3.3", "pytest-cov>=6.0.0"]
+test = [
+    "pytest>=8.3.3",
+    "pytest-cov>=6.0.0",
+    "simpy>=4.1.1",
+]
