--- a/.github/workflows/generate-documentation.yml
+++ b/.github/workflows/generate-documentation.yml
@@ -1,20 +1,25 @@
-name: Sphinx Documentation
-
+name: generate-docs
 on:
   push:
-  pull_request:
-
+    branches:
+      - master 
+      - main
+permissions:
+  contents: write
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: ahmad88me/sphinx-docs-action@v0.7
+      - uses: actions/setup-python@v4
         with:
-          python-version: '3.8'
-          git-username: 'yourusername'
-          git-email: 'youremail@users.noreply.github.com'
-          project-path: 'src'
-          files-pattern: 'examples/*example*.py'
-          commit-message: 'update docs'
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          python-version: 3.x
+      - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV 
+      - uses: actions/cache@v3
+        with:
+          key: mkdocs-material-${{ env.cache_id }}
+          path: .cache
+          restore-keys: |
+            mkdocs-material-
+      - run: pip install mkdocs-material mkdocstrings 
+      - run: mkdocs gh-deploy --force
