--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = [
     { name = "galenseilis", email = "galen.seilis@seilis.ca" },
 ]
 dependencies = [
+    "myst-parser>=4.0.0"
 ]
 readme = "README.md"
 requires-python = ">=3.7"
@@ -16,10 +17,6 @@ dev = [
     "simdist>=0.1.1",
     "simpy>=4.1.1",
     "ruff>=0.8.0",
-]
-docs = [
-    "sphinx>=8.1.3",
-    "sphinx-material>=0.0.36",
 ]
 [build-system]
 requires = ["pdm-backend"]
